fixing drawer overflow issue

--- a/html/stylesheets/screen.css
+++ b/html/stylesheets/screen.css
@@ -1,4 +1,7 @@
-/* line 17, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+                                     /*//////////////////////////////////////
+//  imports
+//////////////////////////////////////*/
+/* line 5, ../../../../../.rvm/gems/ruby-2.1.0/gems/compass-core-1.0.0.alpha.17/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -20,46 +23,46 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../.rvm/gems/ruby-2.1.0/gems/compass-core-1.0.0.alpha.17/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../.rvm/gems/ruby-2.1.0/gems/compass-core-1.0.0.alpha.17/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../.rvm/gems/ruby-2.1.0/gems/compass-core-1.0.0.alpha.17/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../.rvm/gems/ruby-2.1.0/gems/compass-core-1.0.0.alpha.17/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../.rvm/gems/ruby-2.1.0/gems/compass-core-1.0.0.alpha.17/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../.rvm/gems/ruby-2.1.0/gems/compass-core-1.0.0.alpha.17/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../.rvm/gems/ruby-2.1.0/gems/compass-core-1.0.0.alpha.17/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
+/* line 116, ../../../../../.rvm/gems/ruby-2.1.0/gems/compass-core-1.0.0.alpha.17/stylesheets/compass/reset/_utilities.scss */
+article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
 
@@ -70,6 +73,15 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   box-sizing: border-box;
 }
 
+                                     /*//////////////////////////////////////
+//  colors
+//////////////////////////////////////*/
+                                     /*//////////////////////////////////////
+//  fonts
+//////////////////////////////////////*/
+                                     /*//////////////////////////////////////
+//  extension on skeleton
+//////////////////////////////////////*/
 /* line 28, ../../build/sass/partials/_base.scss */
 * {
   -webkit-box-sizing: border-box;
@@ -81,7 +93,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 .block {
   *zoom: 1;
 }
-/* line 18, ../../build/sass/bourbon/addons/_clearfix.scss */
+/* line 17, ../../build/sass/bourbon/addons/_clearfix.scss */
 .block:before, .block:after {
   content: " ";
   display: table;
@@ -111,6 +123,12 @@ input:focus, textarea:focus {
   outline: none;
 }
 
+                                     /*//////////////////////////////////////
+//  mixins
+//////////////////////////////////////*/
+                                     /*//////////////////////////////////////
+//  silent classes
+//////////////////////////////////////*/
 /* line 97, ../../build/sass/partials/_base.scss */
 .block {
   max-width: 60rem;
@@ -129,7 +147,6 @@ body, html {
 body {
   font-size: 62.5%;
   position: relative;
-  overflow-x: hidden;
 }
 
 /* line 3, ../../build/sass/screen.scss */
@@ -178,8 +195,9 @@ p {
   height: 100%;
   position: relative;
   border-bottom: 2px solid #000;
+  overflow-x: hidden;
 }
-/* line 38, ../../build/sass/screen.scss */
+/* line 39, ../../build/sass/screen.scss */
 .intro button, .pair button {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -196,16 +214,16 @@ p {
   z-index: 3;
 }
 
-/* line 50, ../../build/sass/screen.scss */
+/* line 51, ../../build/sass/screen.scss */
 .pair.drawer-active .drawer {
   left: 0;
 }
-/* line 53, ../../build/sass/screen.scss */
+/* line 54, ../../build/sass/screen.scss */
 .pair.drawer-active .copy {
   margin-left: -33%;
 }
 
-/* line 58, ../../build/sass/screen.scss */
+/* line 59, ../../build/sass/screen.scss */
 .copy {
   position: absolute;
   top: 50%;
